--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 html,
 body,
 #homepage {
-  background: #00203fff;
+  background: #94ffcf;
   height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
   text-align: center;
   font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-  color: #adefd1ff;
+  color: #00203fff;
   min-height: 100vh;
 }
