--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 html,
 body,
 #home {
-  background: #94ffcf;
+  background: #343148ff;
   height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
   text-align: center;
-  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-  color: #00203fff;
+  font-family: "LEAGUE SPARTAN";
+  color: #d7c49eff;
   min-height: 100vh;
 }
 
@@ -18,15 +18,13 @@ body,
   font-weight: 650;
   font-size: 100px;
   margin: 0px;
-  font-family: "Calibre", "San Francisco", "SF Pro Text", -apple-system,
-    system-ui, sans-serif;
+  font-family: "LEAGUE SPARTAN";
 }
 
 .h2 {
-  font-size: 60px;
+  font-size: 55px;
   margin: 0px;
-  font-family: "Calibre", "San Francisco", "SF Pro Text", -apple-system,
-    system-ui, sans-serif;
+  font-family: "LEAGUE SPARTAN";
 }
 
 .h3 {
@@ -45,12 +43,35 @@ body,
 .paragraph {
   font-size: 25px;
   margin-top: 0px;
-  font-family: prestige-elite-std, monospace;
+  font-family: "LEAGUE SPARTAN";
 }
 
-.p#intro {
-  font-family: "Calibre", "San Francisco", "SF Pro Text", -apple-system,
-    system-ui, sans-serif;
+.paragraph#intro {
+  font-family: "LEAGUE SPARTAN", system-ui, sans-serif;
   text-decoration: none;
-  color: #00203fff;
+}
+
+/* Nav Bar Styling */
+
+#navbar {
+  height: 70px;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  background: #343148ff;
+  z-index: 1;
+  min-width: 800px;
+}
+
+.navbar-links {
+  margin-top: 2%;
+  margin-right: 3%;
+  text-decoration: none;
+  color: white;
+  font-weight: 540;
+  float: right;
+}
+
+.navbar-links:hover {
+  color: #d7c49eff;
 }
